--- a/export.bat.sample
+++ b/export.bat.sample
@@ -1,5 +1,10 @@
 @echo off
 setlocal
+
+rem Set your proxy if needed.
+rem HTTPS_PROXY=https://(IP):(PORT)
+
 set QIITA_ACCESS_TOKEN=(YOUR-QIITA-ACCESS-TOKEN)
+
 python %~dp0qiita_exporter.py
 pause
